--- a/css/style.css
+++ b/css/style.css
@@ -401,7 +401,8 @@ body.offcanvas {
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  position: relative; }
+  position: relative; 
+ }
 
 .colorlib-heading {
   font-size: 18px;
